# isostate

./: .gitignore  Makefile  README.md  isostate.py  pyproject.toml  pytest.ini  setup.py  test.py
isostate/: README.md  USAGE.md  __init__.py
isostate/data/: 1.iso.fr.csv  isostate.csv
sources/: 0.alias.en.csv  0.sub.en.csv  1.iso.en.csv
test/: cache.marshall.1.csv  test_isostate.py
