[build-system]
requires = ["setuptools >= 43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isostate"
dynamic = ["version", "readme"]
requires-python = ">=3.7" # `importlib.resources` added in 3.7
authors = [
    {name = "Ian Mackinnon", email = "imackinnon@gmail.com"},
]
description = "A tool to look up ISO 3166-1 country codes by state names and vice versa."
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.optional-dependencies]
test = [
    "pytest",
    "tox",
]

[project.urls]
Source = "https://github.com/ianmackinnon/isostate"

[project.scripts]
isostate = "isostate:main"


[tool.setuptools.dynamic]
version = {file = ["VERSION"]}
readme = {file = ["README.md", "USAGE.md"]}
